@startuml MLD_Phase2_Coeur_Metier
!theme plain
skinparam backgroundColor #FFFFFF
skinparam defaultFontName Helvetica
skinparam defaultFontSize 9
skinparam entity {
  BorderColor #2C3E50
  BorderThickness 1
  FontColor #1A1A2E
  FontSize 8
  BackgroundColor #F8F9FA
}
skinparam arrow {
  Color #E74C3C
  Thickness 1
}

hide empty members

' ====================================================================
' TABLES PHASE 1 — Références (simplifiées)
' ====================================================================

entity "categories" as categories {
  + id : uuid PK
  --
  name : varchar(255) NOT NULL
}

entity "users" as users {
  + id : uuid PK
  --
  first_name : varchar(150) NULL
  last_name : varchar(150) NULL
  email : varchar(255) UNIQUE
  # role_id : uuid FK NOT NULL
}

' ====================================================================
' TABLES PHASE 2 — Cœur Métier
' ====================================================================

entity "services" as services {
  + id : uuid PK
  --
  # agency_id : uuid FK NULL
  # department_id : uuid FK NULL
  # category_id : uuid FK NOT NULL
  name : varchar(255) NOT NULL
  description : text NULL
  price : decimal(12,2) NOT NULL
  coverage : varchar(50) NULL
  presentation_video : varchar(255) NULL
  created_at : timestamp NOT NULL
  updated_at : timestamp NOT NULL
  deleted_at : timestamp NULL
}

entity "promotions" as promotions {
  + id : uuid PK
  --
  # service_id : uuid FK NOT NULL
  promotional_price : decimal(12,2) NOT NULL
  start_date : timestamp NOT NULL
  end_date : timestamp NOT NULL
  created_at : timestamp NOT NULL
  updated_at : timestamp NOT NULL
}

entity "price_history" as pricehistory {
  + id : uuid PK
  --
  # service_id : uuid FK NOT NULL
  price : decimal(12,2) NOT NULL
  # changed_by : uuid FK NOT NULL
  reason : varchar(255) NULL
  created_at : timestamp NOT NULL
}

entity "trainings" as trainings {
  + id : uuid PK
  --
  # service_id : uuid FK UNIQUE NOT NULL
  type : varchar(20) NOT NULL
  duration_days : integer NULL
  conditions : text NULL
  deposit_amount : decimal(12,2) NULL
  installment_count : integer NULL
  has_online_payment : boolean DEFAULT false
  created_at : timestamp NOT NULL
  updated_at : timestamp NOT NULL
  deleted_at : timestamp NULL
}

entity "training_modules" as modules {
  + id : uuid PK
  --
  # training_id : uuid FK NOT NULL
  # trainer_id : uuid FK NULL
  name : varchar(255) NOT NULL
  description : text NULL
  type : varchar(20) NOT NULL
  sort_order : integer NOT NULL
  coverage : varchar(50) NULL
  video_url : varchar(500) NULL
  pdf_url : varchar(500) NULL
  created_at : timestamp NOT NULL
  updated_at : timestamp NOT NULL
  deleted_at : timestamp NULL
}

entity "training_enrollments" as enrollments {
  + id : uuid PK
  --
  # training_id : uuid FK NOT NULL
  # user_id : uuid FK NULL
  status : varchar(20) DEFAULT 'enrolled'
  total_amount : decimal(12,2) NOT NULL
  paid_amount : decimal(12,2) DEFAULT 0
  balance : decimal(12,2) DEFAULT 0
  first_name : varchar(150) NULL
  last_name : varchar(150) NULL
  nationality : varchar(100) NULL
  phone : varchar(50) NULL
  city : varchar(150) NULL
  country : varchar(100) NULL
  neighborhood : varchar(150) NULL
  occupation : varchar(150) NULL
  email : varchar(255) NULL
  enrolled_at : timestamp NOT NULL
  completed_at : timestamp NULL
  created_at : timestamp NOT NULL
  updated_at : timestamp NOT NULL
}

entity "training_installments" as installments {
  + id : uuid PK
  --
  # enrollment_id : uuid FK NOT NULL
  amount : decimal(12,2) NOT NULL
  due_date : date NOT NULL
  paid_at : timestamp NULL
  status : varchar(20) DEFAULT 'unpaid'
  penalty_amount : decimal(12,2) DEFAULT 0
  created_at : timestamp NOT NULL
  updated_at : timestamp NOT NULL
}

entity "training_module_progress" as progress {
  + id : uuid PK
  --
  # enrollment_id : uuid FK NOT NULL
  # module_id : uuid FK NOT NULL
  status : varchar(20) DEFAULT 'not_started'
  started_at : timestamp NULL
  completed_at : timestamp NULL
  created_at : timestamp NOT NULL
  updated_at : timestamp NOT NULL
}

' ====================================================================
' RELATIONS
' ====================================================================

categories ||--o{ services          : "classifie"
services   ||--o{ promotions        : "promotion"
services   ||--o{ pricehistory      : "historique"
services   ||--|| trainings         : "formation"
trainings  ||--o{ modules           : "composé de"
users      |o--o{ modules           : "dispensé par"
trainings  ||--o{ enrollments       : "inscrit"
users      |o--o{ enrollments       : "s'inscrit à"
enrollments ||--o{ installments     : "échelonné en"
enrollments ||--o{ progress         : "progresse"
modules    ||--o{ progress          : "suivi"

@enduml
